# mrs_gazebo_common_resources

./: .gitignore  .gitmodules  .rebuild  .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
.ci/: build.sh  ci_before_install.sh  deploy_key_github.enc  install.sh
.github/workflows/: melodic.yml  noetic.yml  ros_build_test.yml  ros_package_build.yml
hooks/: extend_gz_sim_system_plugin_path.dsv.in  mrs_gazebo_common_resources.dsv.in
include/: motor_prop_model.h  perlin_noise.h
include/livox_laser_simulation/: livox_points_plugin.h
include/mrs_gazebo_common_resources/: mrs_multicopter_motor_model.hpp
include/rotors_model/: motor_model.hpp
miscellaneous/: generate_forest.py
models/ball_green/: model.config  model.sdf
models/ball_green/scripts/: material.material
models/ball_orange/: model.config  model.sdf
models/ball_orange/scripts/: material.material
models/ball_red/: model.config  model.sdf
models/ball_red/scripts/: material.material
models/balloon_green/: model.config  model.sdf
models/balloon_green/meshes/: balonek.stl
models/balloon_green/scripts/: material.material
models/balloon_on_a_stick/: model.config  model.sdf  tmp.sh
models/balloon_orange/: model.config  model.sdf
models/balloon_orange/scripts/: material.material
models/balloon_red/: model.config  model.sdf
models/balloon_red/scripts/: balloon_red.material
models/camcalib_pattern_grid/: model.config  model.sdf
models/camcalib_pattern_grid/meshes/: camcalib_pattern_grid.dae
models/deployed_parachute/: model.config  model.sdf
models/deployed_parachute/meshes/: deployed_parachute.dae
models/dynamic_pickup/: model.config  model.sdf
models/dynamic_pickup/trajectories/: circle_trajectory.txt
models/grass_plane/: model.config  model.sdf
models/grass_plane/meshes/: grass_plane.dae
models/grey_wall/: model.config
models/light_panel/: model.config  model.sdf
models/person_standing/: model.sdf
models/safety_led/: model.config  model.sdf
models/servo_camera/: model.config  model.sdf
models/static_camera/: model.config  model.sdf
models/tree_simple/: model.config  model.sdf
models/tree_simple/scripts/: tree_simple.material
models/uneven_plane/: model.config  model.sdf
models/water_particle/: model.config  model.sdf
msg/: LivoxCustomMsg.msg  LivoxCustomPoint.msg
src/: mrs_multicopter_motor_model.cpp
src/common/: perlin_noise.cpp
src/gui_plugins/: README.md  gui_manager.cpp
src/imu_bridge_plugin/: imu_bridge_plugin.cpp
src/model_plugins/: README.md  servo_camera_plugin.cpp
src/physics_plugins/: README.md  fluid_resistance_plugin.cpp  motor_prop_model_plugin.cpp
src/sensor_and_model_plugins/: 2dlidar_plugin.cpp  3dlidar_plugin.cpp  README.md  battery_plugin.cpp  camera_plugin.cpp  dynamic_model_plugin.cpp  gps_plugin.cpp  ground_gimbaled_camera_plugin.cpp  light_plugin.cpp  link_static_tf_publisher.cpp  livox_points_plugin.cpp  magnetometer_plugin.cpp  motor_speed_republisher.cpp  oakd_plugin.cpp  parachute_plugin.cpp  picoflexx_plugin.cpp  rangefinder_plugin.cpp  realsense_plugin.cpp  safety_led_plugin.cpp  servo_camera_plugin.cpp  tracking_camera.cpp  water_gun_plugin.cpp
src/sensor_plugins/: 3dlidar_plugin.cpp  README.md  realsense_plugin.cpp
src/world_plugins/: README.md  rviz_cam_synchronizer.cpp  static_transform_republisher.cpp
worlds/: forest.sdf  forest.world  grass_plane.sdf  grass_plane.world  mrs_city.world  pine_forest.sdf  uneven_plane.world
